--- a/starter-code/src/app/components/my-movie/my-movie.component.html
+++ b/starter-code/src/app/components/my-movie/my-movie.component.html
@@ -1,3 +1,22 @@
 <p>
   my-movie works!
 </p>
+
+<div>
+    <div>
+      <h3>Room {{movie.room}}</h3>
+      <h3>{{movie.title}}</h3>
+      <img [src]="movie.poster" alt="poster">
+    </div>
+    <div class="info">
+    <p>Genres: {{movie.genres}}</p>
+    <p>Year: {{movie.year}}</p>
+    <p>Director: {{movie.director}}</p>
+    <p>Actors: {{movie.actors}}</p>
+    <p>Schedule: {{movie.hours}}</p>
+    <p>Synopsis: {{movie.synopsis}}</p>
+    <div>
+      <a [routerLink]="['']"><button>Home</button></a>
+    </div>
+    </div>
+  </div>
